# self-healing-technical-documentation

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  action.yml  index.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-docker.yml
docs/: HowToRun.md  Learning Path.md  Self-Healing Technical Documentation.md
src/: config.py
src/domain/: exceptions.py  models.py
src/infrastructure/git/: github_provider.py
src/infrastructure/llm/: anthropic_client.py
src/infrastructure/parsers/: ast_code_parser.py  json_index_store.py  mistletoe_doc_parser.py
src/infrastructure/vector_store/: chroma_store.py
src/interfaces/gateways/: code_parser.py  doc_parser.py  git_provider.py  index_store.py  llm.py  vector_store.py
src/use_cases/: generate_corrections.py  get_changed_code_chunks.py  identify_stale_docs.py  index_codebase.py  query_affected_docs.py  run_pr_workflow.py  validate_corrections.py  verify_stale_docs.py
tests/: conftest.py
tests/unit/: test_action_integration.py  test_config.py  test_domain_models.py  test_generate_corrections.py  test_identify_stale_docs.py  test_index_script.py  test_index_store.py  test_parsers.py  test_run_pr_workflow.py  test_use_cases.py  test_validate_corrections.py  test_verify_stale_docs.py
