[project]
name = "self-healing-technical-documentation"
version = "0.1.0"
description = "A clean architecture implementation of self-healing documentation tool"
dependencies = [
    "anthropic>=0.18.0",
    "chromadb>=0.4.24",
    "pygithub>=2.1.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "mistletoe>=1.3.0",
    "whatthepatch>=1.0.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4", "RET", "SIM"]
ignore = ["E501", "B905"]
